New Main Class: VaccinationSystem

--- a/src/vaccination/AdminMainPage.form
+++ b/src/vaccination/AdminMainPage.form
@@ -7,6 +7,11 @@
         <Property name="text" type="java.lang.String" value="jLabel10"/>
       </Properties>
     </Component>
+    <Component class="javax.swing.JLabel" name="jLabel12">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jLabel12"/>
+      </Properties>
+    </Component>
     <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="menuVaccine">
@@ -14,6 +19,7 @@
             <Property name="text" type="java.lang.String" value="Vaccine"/>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="menuVaccineMouseClicked"/>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuVaccineActionPerformed"/>
           </Events>
         </Menu>
